--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -11,7 +11,8 @@
     <form action="/member/save" method="post" enctype="multipart/form-data">
         <input type="text" name="memberEmail" id="email_check" placeholder="이메일" onkeyup="dup_check()"><br>
         <p id="result"></p>
-        <input type="text" name="memberPassword" placeholder="비밀번호"><br>
+        <input type="text" name="memberPassword"id="passCheck" placeholder="비밀번호" onkeyup="pass_check()"><br>
+        <p id="pass_check"></p>
         <input type="text" name="memberName" placeholder="이름"><br>
         <input type="text" name="memberMobile" placeholder="전화번호"><br>
         <input type="text" name="memberBirth" placeholder="생년월일"><br>
@@ -25,6 +26,18 @@
 
 </body>
 <script>
+    const pass_check = ()=>{
+        const inputPass = document.getElementById("passCheck").value;
+        const passArea = document.getElementById("pass_check");
+        let check = /^[0-9]+$/;
+        if(!check.test(inputPass)){
+            passArea.style.color="red";
+            passArea.innerHTML="숫자만 입력 가능합니다.";
+        }else{
+            passArea.style.color="green";
+            passArea.innerHTML="사용 가능합니다.";
+        }
+    }
     const dup_check = () => {
         const inputEmail = document.querySelector("#email_check").value;
         const result = document.querySelector("#result");
@@ -35,8 +48,12 @@
                 memberEmail: inputEmail
             },
         }).then(res => {
+            console.log("res" + res.data);
+            result.style.color="green";
             result.innerHTML = "사용 가능합니다.";
         }).catch(err => {
+            console.log("err" + err.data);
+            result.style.color="red";
             result.innerHTML = "사용 불가합니다..";
         });
     }
