--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -9,10 +9,31 @@
 
 <div class="container mt-5 mb-5">
   <!-- 화면에 보여질 내용이 들어갈 부분 -->
+  <table>
+    <tr>
+      <th>이메일</th>
+      <th>비밀번호</th>
+      <th>이름</th>
+      <th>생일</th>
+      <th>전화번호</th>
+      <th>삭제</th>
+    </tr>
+    <tr th:each="member: ${memberList}">
+      <td th:text="${member.memberEmail}"></td>
+      <td th:text="${member.memberPassword}"></td>
+      <td th:text="${member.memberName}"></td>
+      <td th:text="${member.memberBirth}"></td>
+      <td th:text="${member.memberMobile}"></td>
+      <td>
+        <a th:href="@{|/member/${member.id}|}">삭제</a>
+      </td>
+    </tr>
+  </table>
 
 </div>
 
 <div th:replace="~{component/footer :: footer}"></div>
 
 </body>
+
 </html>
