6. 글 작성 틀 완성

--- a/src/main/resources/templates/boardPages/boardSave.html
+++ b/src/main/resources/templates/boardPages/boardSave.html
@@ -9,7 +9,13 @@
 
 <div class="container mt-5 mb-5">
   <!-- 화면에 보여질 내용이 들어갈 부분 -->
-  <a href="/board/save">글 작성</a>
+  <form action="/board/save" method="post" enctype="multipart/form-data">
+    <input type="text" name="boardWriter" th:value="${session.loginEmail}"><br>
+    <input type="text" name="boardTitle" placeholder="제목"><br>
+    <input type="text" name="boardContents" placeholder="내용"><br>
+    <input type="file" name="boardFile" multiple><br>
+    <input type="submit" value="등록">
+  </form>
 </div>
 
 <div th:replace="~{component/footer :: footer}"></div>
