--- a/src/main/resources/templates/component/nav.html
+++ b/src/main/resources/templates/component/nav.html
@@ -18,7 +18,7 @@
                         <a class="nav-link" href="/member/save">회원가입</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/board">글목록</a>
+                        <a class="nav-link" href="/board/list">글목록</a>
                     </li>
                     <li th:if="${session.loginEmail==null}" class="nav-item" >
                         <a class="nav-link" href="/member/login">로그인</a>
