8. 게시글 목록출력(페이징)

--- a/src/main/resources/templates/boardPages/boardList.html
+++ b/src/main/resources/templates/boardPages/boardList.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:replace="~{component/config :: config}"></th:block>
+    <th:block th:replace="~{component/config :: config}"></th:block>
 </head>
 <body>
 <div th:replace="~{component/header :: header}"></div>
 <div th:replace="~{component/nav :: nav}"></div>
 
 <div class="container mt-5 mb-5">
-  <!-- 화면에 보여질 내용이 들어갈 부분 -->
-  <a href="/board/save">글 작성</a>
+    <!-- 화면에 보여질 내용이 들어갈 부분 -->
+    <a href="/board/save">글 작성</a>
+    <div class="container" id="paging-list">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">작성자</th>
+                <th scope="col">제목</th>
+                <th scope="col">내용</th>
+                <th scope="col">조회수</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="board: ${boardList}">
+                <td th:text="${board.boardWriter}"></td>
+                <td th:text="${board.boardTitle}"></td>
+                <td th:text="${board.boardContents}"></td>
+                <td th:text="${board.boardHits}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <div class="container">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" th:href="@{/board/list(page=1, type=${type}, q=${q})}">
+                        <span>First</span>
+                    </a>
+                </li>
+                <li th:class="${boardList.first} ? 'disabled'" class="page-item">
+                    <a class="page-link"
+                       th:href="${boardList.first} ? '#' : @{/board/list(page=${boardList.number}, type=${type}, q=${q})}">
+                        <span><</span>
+                    </a>
+                </li>
+                <li th:each="page: ${#numbers.sequence(startPage,endPage)}"
+                    th:class="${page == boardList.number + 1} ? 'page-item active'" class="page-item">
+                    <a class="page-link" th:text="${page}"
+                       th:href="@{/board/list(page=${page}, type=${type}, q=${q})}"></a>
+                </li>
+                <li th:class="${boardList.last} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="${boardList.last} ? '#' : @{/board/list(page=${boardList.number +2}, type=${type}, q=${q})}">
+                        <span>&gt</span>
+                    </a>
+                </li>
+
+                <li class="page-item">
+                    <a class="page-link" th:href="@{/board/list(page=${boardList.totalPages}, type=${type}, q=${q})}">
+                        <span>Last</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <div th:replace="~{component/footer :: footer}"></div>
