--- a/src/main/resources/templates/component/nav.html
+++ b/src/main/resources/templates/component/nav.html
@@ -29,7 +29,7 @@
                     <li th:if="${session.loginEmail == 'admin'}" class="nav-item">
                         <a class="nav-link" href="/member/admin">관리자메뉴</a>
                     </li>
-                    <li th:unless="${session.loginEmail == 'admin'}" class="nav-item">
+                    <li th:unless="${session.loginEmail == null}" class="nav-item">
                         <a class="nav-link" href="/member/myPage">마이페이지</a>
                     </li>
                 </ul>
