--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -15,7 +15,7 @@
         <p id="pass_check"></p>
         <input type="text" name="memberName" placeholder="이름"><br>
         <input type="text" name="memberMobile" placeholder="전화번호"><br>
-        <input type="text" name="memberBirth" placeholder="생년월일"><br>
+        <input type="date" name="memberBirth" placeholder="생년월일"><br>
         <input type="file" name="memberProfile" multiple><br>
         <input type="submit" value="등록">
     </form>
