--- a/src/main/resources/templates/boardPages/boardList.html
+++ b/src/main/resources/templates/boardPages/boardList.html
@@ -23,7 +23,7 @@
             <tbody>
             <tr th:each="board: ${boardList}">
                 <td th:text="${board.boardWriter}"></td>
-                <td th:text="${board.boardTitle}"></td>
+                <td><a th:href="@{|/board/${board.id}|(page=${page}, type=${type}, q=${q})}" th:text="${board.boardTitle}">제목</a></td>
                 <td th:text="${board.boardContents}"></td>
                 <td th:text="${board.boardHits}"></td>
             </tr>
@@ -32,25 +32,37 @@
         <div class="container">
             <ul class="pagination justify-content-center">
                 <li class="page-item">
+                    <!--첫페이지 요청 링크 /board?page=1 -->
                     <a class="page-link" th:href="@{/board/list(page=1, type=${type}, q=${q})}">
                         <span>First</span>
                     </a>
                 </li>
+
                 <li th:class="${boardList.first} ? 'disabled'" class="page-item">
-                    <a class="page-link"
-                       th:href="${boardList.first} ? '#' : @{/board/list(page=${boardList.number}, type=${type}, q=${q})}">
-                        <span><</span>
+                    <!--boardList.first: isFirst()
+                        boardList.number: getNumber()-->
+                    <!-- 현재 페이지가 첫페이지라면 링크값을 #으로 아니면 /board?page=number 로  -->
+                    <a class="page-link" th:href="${boardList.first} ? '#' : @{/board/list(page=${boardList.number}, type=${type}, q=${q})}">
+                        <!-- 사용자 3페이지, number 2 /board?page=2 -->
+                        <span><</span> <!-- < -->
                     </a>
                 </li>
-                <li th:each="page: ${#numbers.sequence(startPage,endPage)}"
+
+                <!-- startPage ~ endPage 까지 숫자를 만들어주는 역할
+                    for(int page=startPage; page<=endPage; page++) -->
+                <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
                     th:class="${page == boardList.number + 1} ? 'page-item active'" class="page-item">
-                    <a class="page-link" th:text="${page}"
-                       th:href="@{/board/list(page=${page}, type=${type}, q=${q})}"></a>
+                    <a class="page-link" th:text="${page}" th:href="@{/board/list(page=${page}, type=${type}, q=${q})}"></a>
                 </li>
+
+                <!-- 다음 페이지 요청
+                    현재 3페이지를 보고 있다면 다음 페이지는 4페이지임.
+                    getNumber() 값은 2임.
+                    따라서 4페이지를 보고 싶다면 getNumber()+2를 해야 컨트롤러에 4를 요청할 수 있음. -->
                 <li th:class="${boardList.last} ? 'disabled'">
-                    <a class="page-link"
-                       th:href="${boardList.last} ? '#' : @{/board/list(page=${boardList.number +2}, type=${type}, q=${q})}">
-                        <span>&gt</span>
+                    <a class="page-link" th:href="${boardList.last} ? '#' : @{/board/list(page=${boardList.number + 2}, type=${type}, q=${q})}">
+                        <!-- 사용자 3페이지, number 2 /board?page=4 -->
+                        <span>&gt;</span>
                     </a>
                 </li>
 
